name:                RandomGuesser
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/aibhstin/HaskellRandomNumberGuesser
license:             BSD3
license-file:        LICENSE
author:              Austin Theis-Pickford
maintainer:          pickfora@uni.coventry.ac.uk
copyright:           2020 Austin Theis-Pickford
category:            CLI
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable RandomGuesser
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , text
